Implement Leaderboard setup
- Add leaderboard on the setup panel
- Fix somes typos
- Fix reset button on the setup panel

--- a/skins/setup/default/leaderboardOptions.html
+++ b/skins/setup/default/leaderboardOptions.html
@@ -48,4 +48,15 @@
       <input type="range" value="1" min="0.50" max="1.70" step="0.01" id="leaderboardScale" />
     </label>
   </div>
+
+    <div class="moduleSection">
+        <label for="leaderboardPlayerRender">
+            <span>Player rendering: (<p class="playerRenderingNumber">5</p>)
+                <a href="#" class="ion-ios-help-outline" title="This is to change the number of the player rendering leaderboard"></a>
+                <a href="#" id="leaderboardPlayerRenderReset" class="ion-refresh" title="Reset the player number render of the leaderboard"></a>
+            </span>
+            <input type="range" min="1" max="30" step="1" value="5" id="leaderboardPlayerRender" />
+        </label>
+    </div>
+
 </div>
