--- a/skins/setup/default/overlayMenu.html
+++ b/skins/setup/default/overlayMenu.html
@@ -14,7 +14,7 @@
             <p class="description">Song Card</p>
         </li>
         <li class="leaderboardSettings">
-            <div class="icon ion-stats-bars disabled"></div>
+            <div class="icon ion-stats-bars"></div>
             <p class="description">Leaderboard</p>
         </li>
     </ul>
