--- a/skins/setup/default/overlayOptions.html
+++ b/skins/setup/default/overlayOptions.html
@@ -29,7 +29,7 @@
                 <a href="#" class="ion-ios-help-outline" title="If you want using the Leaderboard system"></a>
             </span>
             <div class="switch">
-                <input type="checkbox" disabled id="leaderboardSwitch" title="Switch On/Off Leaderboard">
+                <input type="checkbox" id="leaderboardSwitch" title="Switch On/Off Leaderboard">
                 <span class="slider round"></span>
             </div>
         </label>
