--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
             <section id="games-overlay">
                 <div id="playerCard-overlay"></div>
                 <div id="songCard-overlay"></div>
-                <table id="leaderboard-overlay">
-                    <tr id="row-seperator">
-                        <td class="separator ion-more">
-                            <div class="playerLocalName localPlayer">...</div>
-                        </td>
-                    </tr>
-                </table>
+                <div id="leaderboard-overlay"></div>
             </section>
 
             <section id="games-setup" class="hidden">
