Project Organisation and Leaderboard Fix
* General
- Architecture of the project
- Clean the project files
- No more forEach()
- Move the interface when it's not use in global

* Leaderboard
- Fix position of the local player
- Fix username color of the local player

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                             <p id="customURI">Click to copy the link !</p>
                         </a>
 
+                        <a target="_blank" id="resetToken" class="roundedButton ion-refresh">
+                            <p id="resetTokenP">Click to reset your token !</p>
+                        </a>
+
                         <div id="BSOVersion">MultiGames-Overlay v3.0.0</div>
                     </div>
                 </div>
