New leaderboard skin "Minify" (idea by BlackOrbit)

--- a/skins/setup/default/leaderboardOptions.html
+++ b/skins/setup/default/leaderboardOptions.html
@@ -5,20 +5,32 @@
 </label>
 
 <div id="module">
-  <div class="moduleSection">
-    <label for="leaderboardPosition">
-      <span>Position:
-        <a href="#" class="ion-ios-help-outline" title="This is to change the position of the leaderboard"></a>
-      </span>
-      <select id="leaderboardPosition" name="leaderboardPosition">
-        <option value="">-- Please choose an option --</option>
-        <option value="0">Top-left</option>
-        <option value="1">Top-right</option>
-        <option value="2">bottom-left</option>
-        <option value="3">bottom-right</option>
-      </select>
-    </label>
-  </div>
+    <div class="moduleSection">
+        <label for="leaderboardSkin">
+            <span>Skin:
+                <a href="#" class="ion-ios-help-outline" title="This is to change the skin of the leaderboard"></a>
+            </span>
+            <select id="leaderboardSkin" name="leaderboardSkin">
+                <option value="">-- Please choose an option --</option>
+                <option value="default">Default</option>
+                <option value="minify">Minify (Blackorbit design)</option>
+            </select>
+        </label>
+    </div>
+    <div class="moduleSection">
+        <label for="leaderboardPosition">
+            <span>Position:
+                <a href="#" class="ion-ios-help-outline" title="This is to change the position of the leaderboard"></a>
+            </span>
+            <select id="leaderboardPosition" name="leaderboardPosition">
+                <option value="">-- Please choose an option --</option>
+                <option value="0">Top-left</option>
+                <option value="1">Top-right</option>
+                <option value="2">bottom-left</option>
+                <option value="3">bottom-right</option>
+            </select>
+        </label>
+    </div>
 
   <div class="moduleSection">
     <label for="leaderboardPosX">
