Fix the setup panel issue when the internet connection of the client is slow

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script>
+            // Try to catch the performance of the internet connection (for the Setup panel)
+            window.timeStamp = performance.now();
+        </script>
         <meta charset="UTF-8" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
