Add alwaysEnabled on PlayerCard and SongCard
- Add alwaysEnabled option in setup panel for PlayerCard and SongCard

--- a/skins/setup/default/playerCardOptions.html
+++ b/skins/setup/default/playerCardOptions.html
@@ -71,4 +71,23 @@
             <input type="range" value="1" min="0.50" max="1.70" step="0.01" id="playerCardScale" />
         </label>
     </div>
+
+    <div class="moduleSection">
+        <label>
+            <span>Extras:
+                <a href="#" class="ion-ios-help-outline" title="Extras for the Player Card"></a>
+            </span>
+        </label>
+
+        <table>
+            <tr>
+                <td>
+                    <p class="inline">Always displayed: <a href="#" class="ion-ios-help-outline" title="For make the player card always visible"></a></p>
+                </td>
+                <td>
+                    <input type="checkbox" id="alwaysDisplayPlayerCard" class="checkboxInline" title="Switch On/Off always display">
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
