--- a/skins/setup/default/songCardOptions.html
+++ b/skins/setup/default/songCardOptions.html
@@ -99,6 +99,14 @@
                     <input type="checkbox" disabled id="ppEstimated" class="checkboxInline" title="Switch On/Off PP Estimated">
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p class="inline">Always displayed: <a href="#" class="ion-ios-help-outline" title="For make the song card always visible"></a></p>
+                </td>
+                <td>
+                    <input type="checkbox" id="alwaysDisplaySongCard" class="checkboxInline" title="Switch On/Off always display">
+                </td>
+            </tr>
         </table>
     </div>
 </div>
