AudioTrip fully supported
- Finish AudioTrip support
- Add games and plugins supported by module (SongCard only for now)

--- a/skins/songCard/default/index.html
+++ b/skins/songCard/default/index.html
@@ -1,27 +1,28 @@
 <div id="songCardGroup">
     <div id="cover">
-        <p id="ranked">Ranked</p>
-        <p id="qualified">Qualified</p>
+        <p id="ranked"></p>
+        <p id="qualified"></p>
         <p id="logoLeaderboardSong" class="logoLeaderboardSong"></p>
     </div>
     <div id="songData">
         <div id="songNameSubName">
-            <p id="title">[BLEED BLOOD]</p>
-            <p id="subTitle">SubNameTest</p>
+            <p id="title"></p>
+            <p id="subTitle"></p>
         </div>
         <div id="songAuthorMapper">
-            <p id="mapper">Jabob</p>
-            <p id="author">Camellia</p>
+            <p id="mapper"></p>
+            <p id="author"></p>
         </div>
         <div id="songDataInfo">
-            <p id="difficulty" class="difficultyClass ExpertPlus">Expert +</p>
-            <p id="bsrKey">10217</p>
+            <p id="difficulty" class="difficultyClass ExpertPlus"></p>
+            <p id="bsrKey"></p>
         </div>
         <div id="songDataInfoBar">
             <div id="songBarLength">
                 <div id="timeToPercentage"></div>
             </div>
-            <p id="accuracy">125.9</p>
+            <p id="accuracy"></p>
+            <p id="score"></p>
         </div>
     </div>
 </div>
