--- a/skins/songCard/dietah/index.html
+++ b/skins/songCard/dietah/index.html
@@ -1,12 +1,12 @@
-<p id="title">Title</p>
-<p id="author">Author</p>
+<p id="title"></p>
+<p id="author"></p>
 <div id="infoGroup">
     <div id="timeBarInfo">
-        <p id="timeToLetters">0:25</p>
-        <p id="totalTimeToLetters">3:24</p>
+        <p id="timeToLetters"></p>
+        <p id="totalTimeToLetters"></p>
     </div>
-    <p id="mapper">Mapper</p>
-    <p id="difficulty" class="difficultyClass ExpertPlus">Expert +</p>
+    <p id="mapper"></p>
+    <p id="difficulty" class="difficultyClass ExpertPlus"></p>
 </div>
 <div id="timeBarGroup">
     <div id="songBarLength">
@@ -14,9 +14,10 @@
     </div>
 </div>
 <div id="performanceGroup">
-    <p id="bsrKey">25z84</p>
+    <p id="bsrKey"></p>
     <div id="infoPerformanceGroup">
         <p id="miss" class="fcMiss ion-android-checkmark-circle missGroup">FC</p>
-        <p id="accuracy">94.2</p>
+        <p id="accuracy"></p>
+        <p id="score"></p>
     </div>
 </div>
