--- a/skins/songCard/freemium/index.html
+++ b/skins/songCard/freemium/index.html
@@ -11,6 +11,7 @@
         <p class="descBar difficultyClass" id="bsrKey"></p>
         <p class="descBar difficultyClass" id="difficulty"></p>
         <p class="descBar difficultyClass" id="bpm"></p>
+        <p class="descBar difficultyClass" id="score"></p>
     </div>
     <div id="songData">
         <div id="songDataInfo">
