--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -7,12 +7,12 @@
 
         <div class="performance-group missGroup">
             <span class="text" id="miss">0</span>
-            <span class="subtext">Miss</span>
+            <span class="subtext" id="missText">Miss</span>
         </div>
 
         <div class="performance-group">
             <span class="text" id="combo">0</span>
-            <span class="subtext">Combo</span>
+            <span class="subtext" id="comboText">Combo</span>
         </div>
 
         <span id="score">0</span>
