--- a/skins/setup/default/generalOptions.html
+++ b/skins/setup/default/generalOptions.html
@@ -14,7 +14,7 @@ If not, leave it blank
     <div class="moduleSection">
         <label for="ScoringSystemSS">
             <span>ScoreSaber:
-                <a href="#" class="ion-ios-help-outline" title="If you want using ScoreSaber scoring system"></a>
+                <a href="#" class="ion-ios-help-outline" title="If you want to use ScoreSaber scoring system"></a>
             </span>
             <div class="switch">
                 <input type="checkbox" id="ScoringSystemSS" title="Switch On/Off ScoreSaber">
@@ -24,7 +24,7 @@ If not, leave it blank
 
         <label for="ScoringSystemBL">
             <span>BeatLeader:
-                <a href="#" class="ion-ios-help-outline" title="If you want using BeatLeader scoring system"></a>
+                <a href="#" class="ion-ios-help-outline" title="If you want to use BeatLeader scoring system"></a>
             </span>
             <div class="switch">
                 <input type="checkbox" id="ScoringSystemBL" title="Switch On/Off BeatLeader">
