--- a/skins/setup/default/overlayOptions.html
+++ b/skins/setup/default/overlayOptions.html
@@ -2,7 +2,7 @@
     <div class="moduleSection">
         <label for="playerCardSwitch">
             <span>Player Card:
-                <a href="#" class="ion-ios-help-outline" title="If you want using the Player Card system"></a>
+                <a href="#" class="ion-ios-help-outline" title="If you want to use the Player Card system"></a>
             </span>
             <div class="switch">
                 <input type="checkbox" id="playerCardSwitch" title="Switch On/Off Player Card">
@@ -14,7 +14,7 @@
     <div class="moduleSection">
         <label for="songCardSwitch">
             <span>Song Card:
-                <a href="#" class="ion-ios-help-outline" title="If you want using the Song Card system"></a>
+                <a href="#" class="ion-ios-help-outline" title="If you want to use the Song Card system"></a>
             </span>
             <div class="switch">
                 <input type="checkbox" id="songCardSwitch" title="Switch On/Off Song Card">
@@ -26,7 +26,7 @@
     <div class="moduleSection">
         <label for="leaderboardSwitch">
             <span>LeaderBoard:
-                <a href="#" class="ion-ios-help-outline" title="If you want using the Leaderboard system"></a>
+                <a href="#" class="ion-ios-help-outline" title="If you want to use the Leaderboard system"></a>
             </span>
             <div class="switch">
                 <input type="checkbox" id="leaderboardSwitch" title="Switch On/Off Leaderboard">
