Add support of Adofai game
- Support of Adofai game
- Fix round of percentage in song
- Fix song card display on SynthRiders
- Add IP params in SynthRiders websocket (Yeah, you can reach the websocket with a tweak into your game folder ...)
- Fix color on the miss / fc on Dietah skin
- Fix for cover (Cover mode instead of Contain)

--- a/skins/songCard/default/index.html
+++ b/skins/songCard/default/index.html
@@ -16,6 +16,22 @@
         <div id="songDataInfo">
             <p id="difficulty" class="difficultyClass ExpertPlus"></p>
             <p id="bsrKey"></p>
+            <div id="performanceGroup">
+                <div id="progression">
+                    <p id="death" class="ion-close-circled"> 0</p>
+                    <p id="checkpoint" class="ion-qr-scanner"> 0</p>
+                    <p id="retry" class="ion-refresh"> 0</p>
+                </div>
+                <div id="hits">
+                    <p id="te">0</p>
+                    <p id="ve">0</p>
+                    <p id="ep">0</p>
+                    <p id="pp">0</p>
+                    <p id="lp">0</p>
+                    <p id="vl">0</p>
+                    <p id="tl">0</p>
+                </div>
+            </div>
         </div>
         <div id="songDataInfoBar">
             <div id="songBarLength">
