--- a/skins/songCard/freemium/index.html
+++ b/skins/songCard/freemium/index.html
@@ -12,6 +12,20 @@
         <p class="descBar difficultyClass" id="difficulty"></p>
         <p class="descBar difficultyClass" id="bpm"></p>
         <p class="descBar difficultyClass" id="score"></p>
+        <p class="descBar difficultyClass" id="progression">
+            <span id="death" class="ion-close-circled"> 0</span>
+            <span id="checkpoint" class="ion-qr-scanner"> 0</span>
+            <span id="retry" class="ion-refresh"> 0</span>
+        </p>
+        <p class="descBar difficultyClass" id="hits">
+            <span id="te">0</span>
+            <span id="ve">0</span>
+            <span id="ep">0</span>
+            <span id="pp">0</span>
+            <span id="lp">0</span>
+            <span id="vl">0</span>
+            <span id="tl">0</span>
+        </p>
     </div>
     <div id="songData">
         <div id="songDataInfo">
