--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -16,6 +16,28 @@
         </div>
 
         <span id="score">0</span>
+
+        <div class="performance-group">
+            <div id="progression">
+                <span class="subtext" id="progressionText">Progress</span>
+                <p id="death" class="ion-close-circled"> 0</p>
+                <p id="checkpoint" class="ion-qr-scanner"> 0</p>
+                <p id="retry" class="ion-refresh"> 0</p>
+            </div>
+        </div>
+
+        <div class="performance-group">
+            <div id="hits">
+                <span class="subtext" id="hitsText">Hits</span>
+                <p id="te">0</p>
+                <p id="ve">0</p>
+                <p id="ep">0</p>
+                <p id="pp">0</p>
+                <p id="lp">0</p>
+                <p id="vl">0</p>
+                <p id="tl">0</p>
+            </div>
+        </div>
     </div>
 
     <div id="beatmap">
@@ -28,6 +50,7 @@
 
             <div>
                 <span id="timeToLetters">0:00</span>
+                <span id="timeToPercentageLetter">0%</span>
             </div>
         </div>
 
