--- a/skins/setup/default/leaderboardOptions.html
+++ b/skins/setup/default/leaderboardOptions.html
@@ -67,8 +67,27 @@
                 <a href="#" class="ion-ios-help-outline" title="This is to change the number of the player rendering leaderboard"></a>
                 <a href="#" id="leaderboardPlayerRenderReset" class="ion-refresh" title="Reset the player number render of the leaderboard"></a>
             </span>
-            <input type="range" min="1" max="30" step="1" value="5" id="leaderboardPlayerRender" />
+            <input type="range" min="1" max="99" step="1" value="5" id="leaderboardPlayerRender" />
         </label>
+    </div>
+
+    <div class="moduleSection">
+        <label>
+            <span>Extras:
+                <a href="#" class="ion-ios-help-outline" title="Extras for the Leaderboard"></a>
+            </span>
+        </label>
+
+        <table>
+            <tr>
+                <td>
+                    <p class="inline">Battle royal:</p>
+                </td>
+                <td>
+                    <input type="checkbox" id="battleRoyal" class="checkboxInline" title="Switch On/Off Battle Royal">
+                </td>
+            </tr>
+        </table>
     </div>
 
 </div>
